Fixed gallery widget SCSS bug that was causing thumbnails to be shifted right.

--- a/media/widgets/gallery/css/gallery.scss
+++ b/media/widgets/gallery/css/gallery.scss
@@ -133,7 +133,6 @@
 						.pcgw-thumbs-cont {
 							position: relative;
 							display: block;
-							margin: 0;
 							padding: 0;
 							height: 100%;
 							width: auto;
